--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,10 +30,6 @@ header a {
     color: #e3b862;
 }
 
-.agora {
-    font-weight: 800;
-}
-
 .navbar {
     width: 50%;
     display: flex;
@@ -51,14 +47,14 @@ header a {
 
 .banner {
     height: fit-content;
-    padding: 40px 0;
+    width: 100%;
     color: white;
-    background-image: url(../assets/img/bg-jelly-fish-para_outras_pags.png);
+    background-image: url(/assets/img/banner.png);
     background-size: cover;
 }
 
 .banner .container {
-    height: 400px;
+    height: 1000px;
     font-size: 36px;
     justify-content: center;
     align-items: center;
@@ -74,4 +70,13 @@ header a {
 
 .banner .container span {
     font-weight: 800;
+}
+
+.banner .container #botao {
+    display: flex;
+    padding-left: 1px;
+}
+
+#txt_sobre {
+    background-color: white;
 }
