--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,6 @@ header a {
 
 }
 
-.banner .container span {
-    font-weight: 800;
-}
 
 .banner .container #botao {
     display: flex;
@@ -78,5 +75,38 @@ header a {
 }
 
 #txt_sobre {
+    background-color: #1b1b1b;
+    color: white;
+    margin: 0 100px 0 100px;
+    text-align: center;
+    border-radius: 40px;
+    padding: 10px 10px 10px 10px;
+
+}
+
+#txt_materias {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    padding: 100px 100px 100px 100px;
+
+}
+
+#txt_materias h1 {
+    
     background-color: white;
+    margin: 0 100px 0 100px;
+    padding: 10px 10px 10px 10px;
+    align-items: center;
+
+}
+
+#txt_materias p {
+    
+    margin: 25px 100px 25px 100px;
+    background-color: white;
+    padding: 10px 10px 10px 10px;
+
+
 }
