--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,10 @@
-@font-face {
-    font-family: 'Magik';
-    src: url(Magik.TTF);
-}
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&display=swap');
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Courier New', Courier, monospace;
-    background-image: url(/assets/img/background_home.jpg) ;
+    font-family: ABeeZee, 'Courier New', Courier, monospace;
+    background-image: url(../img/background_home.jpg) ;
 }
 
 .container {
@@ -19,6 +16,18 @@ body {
 header {
     background-color: #012326;
     border-bottom: 3px #F29F05 solid;
+}
+
+header #entrar{
+    background-color: #F29F05;
+    color: #000;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.subtitulo {
+    text-decoration: wavy;
+    font-size: 20px;
 }
 
 header .container {
@@ -38,23 +47,17 @@ header a {
     list-style: none;
 }
 
-.logo {
-    font-family: Magik, Arial, Helvetica, sans-serif;
-    color: #32b9cd;
-    width: fit-content;
-    font-weight: 500;
-}
 
 .banner {
     height: fit-content;
     width: 100%;
     color: white;
-    background-image: url(/assets/img/banner.png);
+    background-image: url(../img/banner.png);
     background-size: cover;
 }
 
 .banner .container {
-    height: 1000px;
+    height: 800px;
     font-size: 36px;
     justify-content: center;
     align-items: center;
@@ -70,43 +73,75 @@ header a {
 
 
 .banner .container #botao {
-    display: flex;
-    padding-left: 1px;
+    display: inline-block;
+    position: relative;
+    right: 30%;
+    top: 15%;
+}
+
+#botao1 {
+    padding: 19px;
+    color: #012326;
+    background-color: #F29F05;
+    border-bottom: 5px #000 solid;
 }
 
 #txt_sobre {
-    background-color: #1b1b1b;
+    background-color: #d99379b0;
     color: white;
     margin: 0 100px 0 100px;
     text-align: center;
-    border-radius: 40px;
+    border-radius: 8px;
     padding: 10px 10px 10px 10px;
+    box-shadow: 0px 5px 5px black;
+
 
 }
 
 #txt_materias {
-    display: flex;
-    justify-content: space-evenly;
+    color: white;
     align-items: center;
     text-align: center;
     padding: 100px 100px 100px 100px;
+    border-radius: 8px;
+    box-shadow: 0px 5px 5px black;
 
 }
 
 #txt_materias h1 {
     
-    background-color: white;
+    background-color: #d99379b0;
+    color: white;
     margin: 0 100px 0 100px;
     padding: 10px 10px 10px 10px;
     align-items: center;
+    border-radius: 8px;
+    box-shadow: 0px 5px 5px black;
 
 }
 
 #txt_materias p {
-    
-    margin: 25px 100px 25px 100px;
-    background-color: white;
-    padding: 10px 10px 10px 10px;
+    background-color: #d99379b0;
+    color: white;
+    padding: 20px 20px 20px 20px;
+    border-radius: 8px;
+    box-shadow: 0px 5px 5px black;
 
+}
 
+#cont_materias {
+    color: white;
+    display: flex;
+    gap: 3rem;
+}
+
+#container_rodape {
+    background-color: #012326;
+    color: black;
+    border-top: 3px #F29F05 solid;
+}
+
+#logo_rodape {
+    position: relative;
+    left: 5rem;
 }
