--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,6 @@ header a {
     text-align: center;
     padding: 100px 100px 100px 100px;
     border-radius: 8px;
-    box-shadow: 0px 5px 5px black;
 
 }
 
@@ -135,13 +134,85 @@ header a {
     gap: 3rem;
 }
 
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 5vw);
+    grid-gap: 5px;
+}
+
+.img_galeria {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#titulo {
+    display: flex;
+    background-color: #d9937900;
+    color: white;
+    margin: 0 100px 0 100px;
+    padding: 10px 10px 10px 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Os itens abaixo definem (grid column é onde a imagem inicia, o end é onde termina (de largura) o row start é a linha onde está e o woe end é onde termina de comprimento.) */
+
+.galeria_item--1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.galeria_item--2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.galeria_item--3 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 6;
+}
+
+.galeria_item--4 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 6;
+}
+.galeria_item--5 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 6;
+    grid-row-end: 9;
+}
+
+.galeria_item--6 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 6;
+    grid-row-end: 9;
+}
+
+
+
 #container_rodape {
     background-color: #012326;
     color: black;
     border-top: 3px #F29F05 solid;
+    
 }
 
 #logo_rodape {
+    padding: 50px;
+    display: flex;
+    justify-content: space-around;
     position: relative;
-    left: 5rem;
+
 }
