--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: ABeeZee, 'Courier New', Courier, monospace;
-    background-image: url(../img/background_home.jpg) ;
+    background-image: url(../assets/img/background_home.jpg) ;
 }
 
 .container {
@@ -52,7 +52,7 @@ header a {
     height: fit-content;
     width: 100%;
     color: white;
-    background-image: url(../img/banner.png);
+    background-image: url(../assets/img/banner.png);
     background-size: cover;
 }
 
@@ -214,10 +214,14 @@ header a {
     justify-content: center;
 }  
 
-#informacoes_rodape p {
+#informacoes_rodape span {
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
+    color: #F29F05;
+    font-weight: 900;
+    font-size: 20px;
+
 }
 
 
@@ -225,7 +229,6 @@ header a {
 .caixaExterna {
     width: 100%;
     height: 100%;
-    background-color: #23232399;
     display: flex;
     justify-content: center;
     align-items: center;
