--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -353,7 +353,7 @@ header a {
 
 .caixaExternaCadastro {
     width: 98vw;
-    height: 110vh;
+    height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -374,10 +374,8 @@ header a {
 
 .cardLoginCadastro {
     width: 60%;
-    display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     padding: 30px 35px;
     background-color: #012326;
     border-radius: 20px;
