--- a/site/public/css/styleDashboard.css
+++ b/site/public/css/styleDashboard.css
@@ -61,6 +61,7 @@ header a {
 /* Mensagem de saudação ao usuário */
 .hello {
     width: 100%;
+    margin-top: 5%;
     display: flex;
     justify-content: center;
     padding-top: 20px;
@@ -100,7 +101,7 @@ header a {
     background-color: #c0c0c0;
     text-align: center;
     padding: 3% 20% 3% 20%;
-    border-radius: 10%;
+    border-radius: 10px;
 }
 
 .cards_feiticos {
@@ -260,6 +261,7 @@ main.cards_feiticos section.cards5 {
     
 }
 
+
 .subtitulo {
     color: #78e362;
     text-shadow: 1px 7px 10px #0c0c0cbb;
@@ -294,6 +296,20 @@ main.cards_feiticos section.cards5 {
     border-radius: 20px;
     background-color: #b2ec9b73;
     box-shadow: 1px 7px 10px #0c0c0cbb;
+}
 
+.container_bruxos {
+    padding: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 
+.manualBruxos {
+    text-shadow: 1px 1px 2px #424242;
+    color: #ffff;
+    border-top: 2px solid #c0c0c0;
+    text-align: center;
+    padding: 3%;
 }
