--- a/site/public/css/styleDashboardSonserina.css
+++ b/site/public/css/styleDashboardSonserina.css
@@ -102,6 +102,8 @@ header a {
 .container_feiticos {
     padding: 5% 13% 10% 13%;
     display: flex;
+    color: #0e3100;
+
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -109,8 +111,7 @@ header a {
 
 .manualFeiticos {
     text-shadow: 1px 1px 2px #424242;
-    color: #1d6800;
-    background-color: #c0c0c0;
+    background-color: #c0c0c075;
     text-align: center;
     padding: 3% 20% 3% 20%;
     border-radius: 10px;
