--- a/site/public/css/styleQuiz.css
+++ b/site/public/css/styleQuiz.css
@@ -53,7 +53,8 @@ body {
 }
 
 .container_quiz #botaoQuiz {
-  padding: 2% 43% 2% 43%;
+  width: 100%;
+  height: 50%;
   color: #ffa600;
   background-color: #013d42;
   border-bottom: 0%;
