--- a/site/public/css/styleDashboardCorvinal.css
+++ b/site/public/css/styleDashboardCorvinal.css
@@ -218,6 +218,8 @@ main.cards_feiticos section.cards5 {
 }
 
 #slide{
+    height: 29vh;
+    width: 25vw;
     padding: 2%;
     border-bottom: 2px solid #fff;
     border: 1px dashed #134b95;
@@ -226,13 +228,26 @@ main.cards_feiticos section.cards5 {
 
 }
 
+#myChart {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 20%;
+
+}
+
+
 #slide2{
     padding: 2%;
     border-bottom: 2px solid #fff;
     border: 1px dashed #134b95;
     border-radius: 20px;
     background-color: #b2ec9b73;
+    
+}
 
+#myChart2 {
+    width: 100%;
+    height: 100%;
 }
 
 /* Textos */
