--- a/site/public/css/styleDashboardGrifinoria.css
+++ b/site/public/css/styleDashboardGrifinoria.css
@@ -218,25 +218,36 @@ main.cards_feiticos section.cards5 {
 }
 
 #slide{
+    height: 29vh;
+    width: 25vw;
     padding: 2%;
-    width: 40vw;
-    height:37vh;
     border-bottom: 2px solid #fff;
-    border: 1px dashed #740001;
+    border: 1px dashed #134b95;
     border-radius: 20px;
     background-color: #b2ec9b73;
 
 }
 
+#myChart {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 20%;
+
+}
+
+
 #slide2{
     padding: 2%;
-    width: 40vw;
-    height:37vh;
     border-bottom: 2px solid #fff;
-    border: 1px dashed #740001;
+    border: 1px dashed #134b95;
     border-radius: 20px;
     background-color: #b2ec9b73;
+    
+}
 
+#myChart2 {
+    width: 100%;
+    height: 100%;
 }
 
 /* Textos */
