--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -86,6 +86,12 @@ header a {
     
 }
 
+#botao1 a {
+    text-decoration: none;
+    color: black;
+    
+}
+
 .banner .container #botao {
     display: inline-block;
     position: relative;
